--- a/styles.css
+++ b/styles.css
@@ -91,6 +91,7 @@ body.menu-open #form_subtitle
   /* Oculta visualmente el formulario cuando el menú está abierto */
 }
 
+
 /* =====================================================
    HEADER
    ===================================================== */
@@ -866,6 +867,37 @@ body.menu-open .sticky-footer {
     white-space: nowrap;
     /* Evita que el texto se divida en varias líneas */
   }
+  
+/* =====================================================
+  Scrollbar general
+   ===================================================== */
+
+
+
+::-webkit-scrollbar {
+  width: 6px;
+}
+
+/* Fondo del track */
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+/* Thumb (la parte que se mueve) */
+::-webkit-scrollbar-thumb {
+  background-color: rgba(255, 255, 255, 0.3);
+  border-radius: 10px;
+}
+
+/* Hover */
+::-webkit-scrollbar-thumb:hover {
+  background-color: rgba(255, 255, 255, 0.5);
+}
+Para Firefox
+* {
+  scrollbar-width: thin;
+  scrollbar-color: rgba(255,255,255,0.3) transparent;
+}
 }
 
 /* =====================================================
@@ -942,3 +974,6 @@ body.menu-open .sticky-footer {
   position: relative;
   /* Posicionamiento relativo para fluir normalmente */
 }
+
+
+
