--- a/components/header.html
+++ b/components/header.html
@@ -2,16 +2,16 @@
     <div id="nav-container">
 
       <div id="main-logo">
-        <a href="index.html" id="logo-link">
-          <img id="logo" src="./img/logo.png" alt="Smart Career Tools logo">
+        <a href="/index.html" id="logo-link">
+          <img id="logo" src="/img/logo.png" alt="Smart Career Tools logo">
           <h1 id="title">Smart Career Tools</h1>
         </a>
       </div>
 
       <!-- Navegación desktop -->
       <nav id="nav">
-        <a id="nav-download" href="https://sheetsresumecom.sjv.io/DyDLMq">Escanea tu CV</a>
-        <a href="">Blog</a>
+        <a href="https://sheetsresumecom.sjv.io/DyDLMq">Escanea tu CV</a>
+        <a href="/blog/">Blog</a>
         <a href="https://sheetsresume.com/r/smart-career-tools" target="_blank" rel="noopener noreferrer">
           Sheetsresume.com
         </a>
