--- a/components/mobile-menu.html
+++ b/components/mobile-menu.html
@@ -1,7 +1,7 @@
  <div id="mobile-menu">
     <a class="mobile-link" href="https://sheetsresumecom.sjv.io/DyDLMq">🔼 Escanea tu CV</a>
-    <a class="mobile-link" href="#form">🔽 Descargas</a>
-    <a class="mobile-link" href="">📝 Blog</a>
+    <a class="mobile-link" href="/index.html">🔽 Descargas</a>
+    <a class="mobile-link" href="/blog/">📝 Blog</a>
     <a class="mobile-link"
        href="https://sheetsresume.com/r/smart-career-tools"
        target="_blank"
