--- a/components/header.html
+++ b/components/header.html
@@ -10,10 +10,11 @@
 
       <!-- Navegación desktop -->
       <nav id="nav">
+         <a href="/descargas/">Descargas</a>
+         <a href="/blog/">Blogs</a>
         <a href="https://sheetsresumecom.sjv.io/DyDLMq">Escanea tu CV</a>
-        <a href="/blog/">Blog</a>
         <a href="https://sheetsresume.com/r/smart-career-tools" target="_blank" rel="noopener noreferrer">
-          Sheetsresume.com
+          Sheetsresume
         </a>
       </nav>
 
