--- a/components/mobile-menu.html
+++ b/components/mobile-menu.html
@@ -1,11 +1,11 @@
  <div id="mobile-menu">
-    <a class="mobile-link" href="https://sheetsresumecom.sjv.io/DyDLMq">🔼 Escanea tu CV</a>
-    <a class="mobile-link" href="/index.html">🔽 Descargas</a>
-    <a class="mobile-link" href="/blog/">📝 Blog</a>
+    <a class="mobile-link" href="/index.html">  🏠 Inicio</a>
+    <a class="mobile-link" href="https://sheetsresumecom.sjv.io/DyDLMq">   🔼 Escanea tu CV</a>
+    <a class="mobile-link" href="/descargas/">  🔽 Descargas</a>
+    <a class="mobile-link" href="/blog/"> 📝 Blogs</a>
     <a class="mobile-link"
        href="https://sheetsresume.com/r/smart-career-tools"
        target="_blank"
-       rel="noopener noreferrer">
-       🔗 sheetsresume.com
+       rel="noopener noreferrer">   🔗 sheetsresume.com
     </a>
   </div>
