--- a/components/mobile-menu.html
+++ b/components/mobile-menu.html
@@ -1,11 +1,11 @@
  <div id="mobile-menu">
-    <a class="mobile-link" href="/index.html">  🏠 Inicio</a>
-    <a class="mobile-link" href="https://sheetsresumecom.sjv.io/DyDLMq">   🔼 Escanea tu CV</a>
-    <a class="mobile-link" href="/descargas/">  🔽 Descargas</a>
-    <a class="mobile-link" href="/blog/"> 📝 Blogs</a>
+    <a class="mobile-link" href="/index.html"> <img class="icon-mobile" src="/img/iconos/home.png" alt="home"> Inicio</a>
+    <a class="mobile-link" href="https://sheetsresumecom.sjv.io/DyDLMq">   <img class="icon-mobile" src="/img/iconos/upload.png" alt="upload"> Escanea tu CV</a>
+    <a class="mobile-link" href="/descargas/"> <img class="icon-mobile" src="/img/iconos/download.png" alt="download"> Descargas</a>
+    <a class="mobile-link" href="/blog/"><img class="icon-mobile" src="/img/iconos/blogs.png" alt="blogs"> Blogs</a>
     <a class="mobile-link"
        href="https://sheetsresume.com/r/smart-career-tools"
        target="_blank"
-       rel="noopener noreferrer">   🔗 sheetsresume.com
+       rel="noopener noreferrer"> <img class="icon-mobile" src="/img/iconos/link.png" alt="sheetsresume.com"> sheetsresume.com
     </a>
   </div>
