--- a/styles.css
+++ b/styles.css
@@ -1007,3 +1007,7 @@ body.is-navigating #menu-overlay {
   transform: translateY(2px);
   margin-left: 6px;
 }
+
+h1{
+  font-family: 'cambria'!important;
+}
