--- a/components/header.html
+++ b/components/header.html
@@ -14,7 +14,7 @@
          <a href="/blog/">Blogs</a>
         <a href="https://sheetsresumecom.sjv.io/DyDLMq">Escanea tu CV</a>
         <a href="https://sheetsresume.com/r/smart-career-tools" target="_blank" rel="noopener noreferrer">
-          Sheetsresume
+          Crea tu CV
         </a>
       </nav>
 
